# SearchEngine_v03

./: .gitignore
HTML/: index.html
SearchEngine/: CMakeLists.txt
SearchEngine/SearchEngine/: CMakeLists.txt  Crawler.cpp  Crawler.h  DataBaseManager.cpp  DataBaseManager.h  Indexer.cpp  Indexer.h  IniParser.cpp  IniParser.h  SearchEngine.cpp  Server.cpp  Server.h  config.ini
SearchEngine/SearchEngine/HTMLDB/: CMakeLists.txt
SearchEngine/SearchEngine/HTMLDownloaded/: CMakeLists.txt
